--- a/src/html/events.html
+++ b/src/html/events.html
@@ -34,7 +34,7 @@
                 <a href="../../index.html">
                     <img
                     src="../../assets/images/logo.png"
-                    alt="purple company logo which shows a creative take on sodium"/>
+                    alt="purple company logo which shows a creative take on nitrogen"/>
                 </a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
@@ -112,7 +112,7 @@
                 <div class="main-event-wrapper">
                     <h1>A Night in the Museum</h1>
                     <p>
-                        Gather your family for an exciting night in the museum! Get ready to cozy up next to the dinosaurs and science displays for a sleepover adventure. Don\t forget your trusty sleeping bag as we prepare to dive into the wonders of science together. It's going to be a night filled with exploration, laughter, and maybe even a bit of dino-snoring!
+                        Gather your family for an exciting night in the museum! Get ready to cozy up next to the dinosaurs and science displays for a sleepover adventure. Don't forget your trusty sleeping bag as we prepare to dive into the wonders of science together. It's going to be a night filled with exploration, laughter, and maybe even a bit of dino-snoring!
                     </p>
                     <a href="./exhibitions.html"></a></div>
                 <div class="events__other-events">
@@ -218,11 +218,11 @@
                 <div class="info-wrapper__quick-links">
                     <span>Quick Links</span>
                     <div>
-                        <a href="">About us</a>
-                        <a href="">Contact us</a>
-                        <a href="">Volunteering</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Terms and conditions</a>
+                        <a href="./about.html">About us</a>
+                        <a href="./contact-us.html">Contact us</a>
+                        <a href="./contribution.html">Volunteering</a>
+                        <a href="./privacy-policy.html">Privacy policy</a>
+                        <a href="./terms-and-conditions.html">Terms and conditions</a>
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
@@ -237,7 +237,11 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img src="../../assets/images/logo.png" alt="company logo" />
+                    <a href="../../index.html">
+                        <img
+                        src="../../assets/images/logo.png"
+                        alt="purple company logo which shows a creative take on nitrogen"/>
+                    </a>
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
