remove li from details

--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -51,21 +51,15 @@
                                     <li>
                                         <details>
                                             <summary>Activities</summary>
-                                            <li>
-                                                <a href="./events.html"
-                                                    >Events</a
-                                                >
-                                            </li>
-                                            <li>
-                                                <a href="./exhibitions.html"
-                                                    >Exhibitions</a
-                                                >
-                                            </li>
-                                            <li>
-                                                <a href="./birthday.html"
-                                                    >Book a birthday party</a
-                                                >
-                                            </li>
+                                                <a href="./events.html">
+                                                    Events
+                                                </a>
+                                                <a href="./exhibitions.html">
+                                                    Exhibitions
+                                                </a>
+                                                <a href="./birthday.html">
+                                                    Book a birthday party
+                                                </a>
                                         </details>
                                     </li>
                                     <li>
