fix faulty closing tag

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
-                    <span>Newsletter</p>
+                    <span>Newsletter</span>
                     <div class="input-wrapper">
                         <input type="email" name="email" id="email" placeholder="Your e-mail address"/>
                         <button type="submit">
