--- a/src/html/terms-and-conditions.html
+++ b/src/html/terms-and-conditions.html
@@ -35,8 +35,9 @@
             <div class="header-wrapper__left">
                 <a href="../../index.html">
                     <img
-                    src="../../assets/images/logo.png"
-                    alt="purple company logo which shows a creative take on sodium"/>
+                        src="../../assets/images/logo.png"
+                        alt="purple company logo which shows a creative take on sodium"
+                    />
                 </a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
@@ -53,15 +54,13 @@
                                     <li>
                                         <details>
                                             <summary>Activities</summary>
-                                                <a href="./events.html">
-                                                    Events
-                                                </a>
-                                                <a href="./exhibitions.html">
-                                                    Exhibitions
-                                                </a>
-                                                <a href="./birthday.html">
-                                                    Book a birthday party
-                                                </a>
+                                            <a href="./events.html"> Events </a>
+                                            <a href="./exhibitions.html">
+                                                Exhibitions
+                                            </a>
+                                            <a href="./birthday.html">
+                                                Book a birthday party
+                                            </a>
                                         </details>
                                     </li>
                                     <li>
@@ -91,77 +90,120 @@
         </header>
         <main>
             <section class="general-wrapper">
-            <h1>Terms and Conditions</h1>
-            <p>Last Updated: 07/02/2024</p>
-            <div>
-                <h2>Introduction</h2>
-                <p>
-                    Welcome to the Bergen Science Museum website. By accessing our website, you agree to these terms and conditions. Please read them carefully.
-                </p>
-                <h2>Acceptance of Terms</h2>
-                <p>
-                    Your access to and use of our website is conditioned upon your acceptance of and compliance with these Terms. If you disagree with any part of the terms, you may not access the website.
-                </p>
-                <h2>Use of Website</h2>
-                <ul>
-                    <li>
-                        Permitted Use: The website is intended to provide information about our museum, its exhibits, events, and educational resources. Any use of the site for purposes other than this is strictly prohibited.
-                    </li>
-                    <li>
-                        Intellectual Property: The content on our website, including text, graphics, logos, images, and software, is the property of Bergen Science Museum or its content suppliers and protected by Norwegian and international copyright laws.
-                    </li>
-                    <li>
-                        Prohibited Activities: You may not use the site in a way that damages, disables, overburdens, or impairs the site or interferes with any other party's use of the site. Unlawful or prohibited use of the website is strictly forbidden.
-                    </li>
-                </ul>
+                <h1>Terms and Conditions</h1>
+                <p>Last Updated: 07/02/2024</p>
+                <div>
+                    <h2>Introduction</h2>
+                    <p>
+                        Welcome to the Bergen Science Museum website. By
+                        accessing our website, you agree to these terms and
+                        conditions. Please read them carefully.
+                    </p>
+                    <h2>Acceptance of Terms</h2>
+                    <p>
+                        Your access to and use of our website is conditioned
+                        upon your acceptance of and compliance with these Terms.
+                        If you disagree with any part of the terms, you may not
+                        access the website.
+                    </p>
+                    <h2>Use of Website</h2>
+                    <ul>
+                        <li>
+                            Permitted Use: The website is intended to provide
+                            information about our museum, its exhibits, events,
+                            and educational resources. Any use of the site for
+                            purposes other than this is strictly prohibited.
+                        </li>
+                        <li>
+                            Intellectual Property: The content on our website,
+                            including text, graphics, logos, images, and
+                            software, is the property of Bergen Science Museum
+                            or its content suppliers and protected by Norwegian
+                            and international copyright laws.
+                        </li>
+                        <li>
+                            Prohibited Activities: You may not use the site in a
+                            way that damages, disables, overburdens, or impairs
+                            the site or interferes with any other party's use of
+                            the site. Unlawful or prohibited use of the website
+                            is strictly forbidden.
+                        </li>
+                    </ul>
 
-                <h2>Content</h2>
-                <ul>
-                    <li>
-                        Accuracy: We endeavour to ensure that the information on our website is accurate and up-to-date, but we cannot guarantee its complete accuracy or reliability.
+                    <h2>Content</h2>
+                    <ul>
+                        <li>
+                            Accuracy: We endeavour to ensure that the
+                            information on our website is accurate and
+                            up-to-date, but we cannot guarantee its complete
+                            accuracy or reliability.
+                        </li>
+                        <li>
+                            Changes: Content on our website is subject to change
+                            without notice.
+                        </li>
+                    </ul>
 
-                    </li>
-                    <li>
-                        Changes: Content on our website is subject to change without notice.
-                    </li>
-                </ul>
+                    <h2>Links to Other Websites</h2>
+                    <p>
+                        Our website may contain links to third-party websites or
+                        services that are not owned or controlled by Bergen
+                        Science Museum. We have no control over, and assume no
+                        responsibility for, the content, privacy policies, or
+                        practices of any third-party websites or services.
+                    </p>
 
-                <h2>Links to Other Websites</h2>
-                <p>
-                    Our website may contain links to third-party websites or services that are not owned or controlled by Bergen Science Museum. We have no control over, and assume no responsibility for, the content, privacy policies, or practices of any third-party websites or services.
-                </p>
-
-                <h2>Disclaimer of Warranties</h2>
-                <p>
-                Our website is provided on an "as is" and "as available" basis. [Museum Name] makes no representations or warranties of any kind, express or implied, as to the operation of the website or the information, content, materials, or products included on the website.
-                </p>
-                <h2>Limitation of Liability</h2>
-                <p>
-                    Bergen Science Museum will not be liable for any damages of any kind arising from the use of this website, including, but not limited to direct, indirect, incidental, punitive, and consequential damages.
-                </p>
-                <h2>Indemnification</h2>
-                <p>
-                    You agree to indemnify, defend, and hold harmless Bergen Science Museum, its officers, directors, employees, agents, and suppliers from any claim, demand, damages, or other losses, including reasonable attorneys' fees, asserted by any third-party due to or arising out of your use of the website or violation of these Terms.
-                </p>
-                <h2>Applicable Law</h2>
-                <p>
-                    By visiting our website, you agree that the laws of Norway, without regard to principles of conflict of laws, will govern these Terms and any dispute of any sort that might arise between you and Bergen Science Museum.
-                </p>
-                <h2>Changes to Terms and Conditions</h2>
-                <p>
-                    We reserve the right to make changes to our website, policies, and these Terms at any time. If any of these conditions shall be deemed invalid, void, or for any reason unenforceable, that condition shall be deemed severable and shall not affect the validity and enforceability of any remaining condition.
-
-                </p>
-                <h2>Contact Information</h2>
-                <p>
-                    For any questions regarding these Terms, please contact us at post@bsm.no or 55 55 55 55.
-                </p>
-            </div>
+                    <h2>Disclaimer of Warranties</h2>
+                    <p>
+                        Our website is provided on an "as is" and "as available"
+                        basis. [Museum Name] makes no representations or
+                        warranties of any kind, express or implied, as to the
+                        operation of the website or the information, content,
+                        materials, or products included on the website.
+                    </p>
+                    <h2>Limitation of Liability</h2>
+                    <p>
+                        Bergen Science Museum will not be liable for any damages
+                        of any kind arising from the use of this website,
+                        including, but not limited to direct, indirect,
+                        incidental, punitive, and consequential damages.
+                    </p>
+                    <h2>Indemnification</h2>
+                    <p>
+                        You agree to indemnify, defend, and hold harmless Bergen
+                        Science Museum, its officers, directors, employees,
+                        agents, and suppliers from any claim, demand, damages,
+                        or other losses, including reasonable attorneys' fees,
+                        asserted by any third-party due to or arising out of
+                        your use of the website or violation of these Terms.
+                    </p>
+                    <h2>Applicable Law</h2>
+                    <p>
+                        By visiting our website, you agree that the laws of
+                        Norway, without regard to principles of conflict of
+                        laws, will govern these Terms and any dispute of any
+                        sort that might arise between you and Bergen Science
+                        Museum.
+                    </p>
+                    <h2>Changes to Terms and Conditions</h2>
+                    <p>
+                        We reserve the right to make changes to our website,
+                        policies, and these Terms at any time. If any of these
+                        conditions shall be deemed invalid, void, or for any
+                        reason unenforceable, that condition shall be deemed
+                        severable and shall not affect the validity and
+                        enforceability of any remaining condition.
+                    </p>
+                    <h2>Contact Information</h2>
+                    <p>
+                        For any questions regarding these Terms, please contact
+                        us at post@bsm.no or 55 55 55 55.
+                    </p>
+                </div>
             </section>
         </main>
 
         <footer class="footer-wrapper">
-        
             <div class="info-wrapper">
                 <div class="info-wrapper__location">
                     <span>Contact info</span>
@@ -208,13 +250,20 @@
                         <a href="./contact-us.html">Contact us</a>
                         <a href="./contribution.html">Volunteering</a>
                         <a href="./privacy-policy.html">Privacy policy</a>
-                        <a href="./terms-and-conditions.html">Terms and conditions</a>
+                        <a href="./terms-and-conditions.html"
+                            >Terms and conditions</a
+                        >
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
-                    <span>Newsletter</p>
+                    <span>Newsletter</span>
                     <div class="input-wrapper">
-                        <input type="email" name="email" id="email" placeholder="Your e-mail address"/>
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            placeholder="Your e-mail address"
+                        />
                         <button type="submit">
                             <i class="fa-solid fa-play"></i>
                         </button>
@@ -223,7 +272,10 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img src="../../assets/images/logo.png" alt="company logo" />
+                    <img
+                        src="../../assets/images/logo.png"
+                        alt="company logo"
+                    />
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
@@ -231,16 +283,24 @@
                 </div>
                 <div class="info-wrapper-bottom__social-media">
                     <div>
-                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com"
+                            ><i class="fa-brands fa-facebook-f"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com"
+                            ><i class="fa-brands fa-instagram"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com"
+                            ><i class="fa-brands fa-tiktok"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.x.com"
+                            ><i class="fa-brands fa-x-twitter"></i
+                        ></a>
                     </div>
                 </div>
             </div>
