--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Discover the many ways you can contribute to our museum." />
+        <meta
+            name="description"
+            content="Discover the many ways you can contribute to our museum."
+        />
         <title>Contribution | Bergen Science Museum</title>
 
         <link
@@ -33,8 +36,9 @@
             <div class="header-wrapper__left">
                 <a href="../../index.html">
                     <img
-                    src="../../assets/images/logo.png"
-                    alt="purple company logo which shows a creative take on sodium"/>
+                        src="../../assets/images/logo.png"
+                        alt="purple company logo which shows a creative take on sodium"
+                    />
                 </a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
@@ -51,15 +55,13 @@
                                     <li>
                                         <details>
                                             <summary>Activities</summary>
-                                                <a href="./events.html">
-                                                    Events
-                                                </a>
-                                                <a href="./exhibitions.html">
-                                                    Exhibitions
-                                                </a>
-                                                <a href="./birthday.html">
-                                                    Book a birthday party
-                                                </a>
+                                            <a href="./events.html"> Events </a>
+                                            <a href="./exhibitions.html">
+                                                Exhibitions
+                                            </a>
+                                            <a href="./birthday.html">
+                                                Book a birthday party
+                                            </a>
                                         </details>
                                     </li>
                                     <li>
@@ -89,49 +91,72 @@
         </header>
 
         <main>
-
             <section class="hero-wrapper">
-                <div class="hero-wrapper__background contribution-hero__background">
+                <div
+                    class="hero-wrapper__background contribution-hero__background"
+                >
                     <div class="custom-shape-divider-bottom-1707593276">
-                        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+                        <svg
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 1200 120"
+                            preserveAspectRatio="none"
+                        >
+                            <path
+                                d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                                class="shape-fill"
+                            ></path>
                         </svg>
                     </div>
                 </div>
             </section>
 
-
             <section class="information-wrapper">
-                <h1> Want to contribute to our museum?</h1>
+                <h1>Want to contribute to our museum?</h1>
                 <div>
-                <h2>Support us</h2>
-                <p>
-                There are various ways you can support the museum. 
-                </p>
-                <p>
-                Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
-                
-                
-                </p>
-                <p>
-                You can also support us by donating items of interest to the museum's collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our <a href="./contact-us.html">Collections Department</a> and they will be able to assist you.
-                </p>
+                    <h2>Support us</h2>
+                    <p>There are various ways you can support the museum.</p>
+                    <p>
+                        Donations are very welcome and are an important way we
+                        keep this museum open and accessible to the whole
+                        community.
+                    </p>
+                    <p>
+                        You can also support us by donating items of interest to
+                        the museum's collections. If you have some item or
+                        collection that you think others would enjoy, please let
+                        us know by contacting our
+                        <a href="./contact-us.html">Collections Department</a>
+                        and they will be able to assist you.
+                    </p>
 
-                <h2>Volunteering</h2>
-                <p>
-                A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
-
-                </p>
-                <p>
-                You can help volunteer in a number of different spheres. Please contact us if you'd like to find out more about how you can get involved.
-                </p>
-                <h2>Internships</h2>
-                <p>
-                Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
-                </p>
-                <p>
-                You'll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
-                </p>
+                    <h2>Volunteering</h2>
+                    <p>
+                        A number of people volunteer their time and effort to
+                        keep the displays in good order and ready for visitors
+                        to come and enjoy. Volunteering has its perks including
+                        getting to see behind the scenes of a working museum,
+                        access to staff-only lectures, and a monthly lunch where
+                        all staff and volunteers come together to discuss ideas
+                        for future exhibits and strategies for the museum.
+                    </p>
+                    <p>
+                        You can help volunteer in a number of different spheres.
+                        Please contact us if you'd like to find out more about
+                        how you can get involved.
+                    </p>
+                    <h2>Internships</h2>
+                    <p>
+                        Are you interested in working in a museum? Do you enjoy
+                        the fun and excitement of sharing the wonders of nature
+                        with people? Well you could be just the right person to
+                        enjoy an internship at the museum.
+                    </p>
+                    <p>
+                        You'll be learning from a number of different academics
+                        and people who are passionate about science and sharing
+                        it with the wider community.
+                    </p>
                 </div>
             </section>
         </main>
@@ -183,13 +208,20 @@
                         <a href="./contact-us.html">Contact us</a>
                         <a href="./contribution.html">Volunteering</a>
                         <a href="./privacy-policy.html">Privacy policy</a>
-                        <a href="./terms-and-conditions.html">Terms and conditions</a>
+                        <a href="./terms-and-conditions.html"
+                            >Terms and conditions</a
+                        >
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
-                    <span>Newsletter</p>
+                    <span>Newsletter</span>
                     <div class="input-wrapper">
-                        <input type="email" name="email" id="email" placeholder="Your e-mail address"/>
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            placeholder="Your e-mail address"
+                        />
                         <button type="submit">
                             <i class="fa-solid fa-play"></i>
                         </button>
@@ -198,7 +230,10 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img src="../../assets/images/logo.png" alt="company logo" />
+                    <img
+                        src="../../assets/images/logo.png"
+                        alt="company logo"
+                    />
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
@@ -206,16 +241,24 @@
                 </div>
                 <div class="info-wrapper-bottom__social-media">
                     <div>
-                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com"
+                            ><i class="fa-brands fa-facebook-f"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com"
+                            ><i class="fa-brands fa-instagram"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com"
+                            ><i class="fa-brands fa-tiktok"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.x.com"
+                            ><i class="fa-brands fa-x-twitter"></i
+                        ></a>
                     </div>
                 </div>
             </div>
