--- a/src/html/privacy-policy.html
+++ b/src/html/privacy-policy.html
@@ -35,8 +35,9 @@
             <div class="header-wrapper__left">
                 <a href="../../index.html">
                     <img
-                    src="../../assets/images/logo.png"
-                    alt="purple company logo which shows a creative take on sodium"/>
+                        src="../../assets/images/logo.png"
+                        alt="purple company logo which shows a creative take on sodium"
+                    />
                 </a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
@@ -53,15 +54,13 @@
                                     <li>
                                         <details>
                                             <summary>Activities</summary>
-                                                <a href="./events.html">
-                                                    Events
-                                                </a>
-                                                <a href="./exhibitions.html">
-                                                    Exhibitions
-                                                </a>
-                                                <a href="./birthday.html">
-                                                    Book a birthday party
-                                                </a>
+                                            <a href="./events.html"> Events </a>
+                                            <a href="./exhibitions.html">
+                                                Exhibitions
+                                            </a>
+                                            <a href="./birthday.html">
+                                                Book a birthday party
+                                            </a>
                                         </details>
                                     </li>
                                     <li>
@@ -91,86 +90,106 @@
         </header>
         <main>
             <section class="general-wrapper">
-            <h1>Privacy Policy</h1>
-            <p>Last Updated: 07/02/2024</p>
-            <div>
-                <h2>Introduction</h2>
-                <p>
-                    Welcome to Bergen Science Museum, a community science museum located in Bredalsmarken 15, 5006 Bergen . Our website is dedicated to providing information about our museum, including exhibits, events, and educational resources. This privacy policy outlines how we handle information collected through our website.
-                </p>
-                <h2>Scope</h2>
-                <p>
-                    This policy applies to all visitors of our website and covers how we collect, use, and safeguard any information obtained.
-                </p>
-                <h2>Information We Do Not Collect</h2>
-                <ul>
-                    <li>
-                        Cookies: Our website does not use cookies or similar tracking technologies.
-                    </li>
-                    <li>
-                        Personal Data: We do not require users to create an account or log in to access our website. Therefore, we do not collect personal data like names, addresses, email addresses, or phone numbers.
-                    </li>
-                    <li>
-                        User Activity Tracking: We do not track or analyse user behaviour on our website.
-                    </li>
-                </ul>
+                <h1>Privacy Policy</h1>
+                <p>Last Updated: 07/02/2024</p>
+                <div>
+                    <h2>Introduction</h2>
+                    <p>
+                        Welcome to Bergen Science Museum, a community science
+                        museum located in Bredalsmarken 15, 5006 Bergen . Our
+                        website is dedicated to providing information about our
+                        museum, including exhibits, events, and educational
+                        resources. This privacy policy outlines how we handle
+                        information collected through our website.
+                    </p>
+                    <h2>Scope</h2>
+                    <p>
+                        This policy applies to all visitors of our website and
+                        covers how we collect, use, and safeguard any
+                        information obtained.
+                    </p>
+                    <h2>Information We Do Not Collect</h2>
+                    <ul>
+                        <li>
+                            Cookies: Our website does not use cookies or similar
+                            tracking technologies.
+                        </li>
+                        <li>
+                            Personal Data: We do not require users to create an
+                            account or log in to access our website. Therefore,
+                            we do not collect personal data like names,
+                            addresses, email addresses, or phone numbers.
+                        </li>
+                        <li>
+                            User Activity Tracking: We do not track or analyse
+                            user behaviour on our website.
+                        </li>
+                    </ul>
 
-                <h2>Information We Collect</h2>
-                <ul>
-                    <li>
-                        Voluntary Information: Visitors may choose to contact us via email or phone for inquiries. In such cases, we only use the information provided to address the inquiry.
+                    <h2>Information We Collect</h2>
+                    <ul>
+                        <li>
+                            Voluntary Information: Visitors may choose to
+                            contact us via email or phone for inquiries. In such
+                            cases, we only use the information provided to
+                            address the inquiry.
+                        </li>
+                        <li>
+                            Aggregate Data: We may collect anonymous, aggregate
+                            data such as the number of visitors to our site for
+                            internal use. This data does not identify individual
+                            users.
+                        </li>
+                    </ul>
 
-                    </li>
-                    <li>
-                        Aggregate Data: We may collect anonymous, aggregate data such as the number of visitors to our site for internal use. This data does not identify individual users.
-                    </li>
-                </ul>
+                    <h2>Use of Information</h2>
+                    <p>
+                        The limited information we collect is used solely for
+                        the following purposes:
+                    </p>
+                    <ul>
+                        <li>Responding to inquiries.</li>
+                        <li>
+                            Improving our website and services. Ensuring the
+                            security of our website.
+                        </li>
+                    </ul>
 
-                <h2>Use of Information</h2>
-                <p>
-                    The limited information we collect is used solely for the following purposes: 
-                </p>
-                <ul>
-                    <li>
-
-                        Responding to inquiries.
-                    </li>
-                    <li>
-
-                        Improving our website and services. Ensuring the security of our website.
-                    </li>
-                </ul>
-
-                <h2>Date Security</h2>
-                <p>
-                    We are committed to ensuring the security of our website and protect against unauthorized access, alteration, disclosure, or destruction of information.
-                </p>
-                <h2>Third-Party Links</h2>
-                <p>
-                    Our website may contain links to third-party sites. We are not responsible for the privacy practices of these external sites.
-                </p>
-                <h2>Children's Privacy</h2>
-                <p>
-                    Our website is designed for a general audience and does not knowingly collect information from children under the age of 16.
-                </p>
-                <h2>Changes to Our Privacy Policy</h2>
-                <p>
-                    We may update this policy periodically. Any changes will be posted on this page with an updated revision date.
-                </p>
-                <h2>Contact Us</h2>
-                <p>
-                    For any questions or concerns about our privacy policy, please contact us at post@bsm.no or 55 55 55 55.
-                </p>
-                <h2>Governing Law</h2>
-                <p>
-                    This privacy policy is governed by Norwegian law.
-                </p>
-            </div>
+                    <h2>Date Security</h2>
+                    <p>
+                        We are committed to ensuring the security of our website
+                        and protect against unauthorized access, alteration,
+                        disclosure, or destruction of information.
+                    </p>
+                    <h2>Third-Party Links</h2>
+                    <p>
+                        Our website may contain links to third-party sites. We
+                        are not responsible for the privacy practices of these
+                        external sites.
+                    </p>
+                    <h2>Children's Privacy</h2>
+                    <p>
+                        Our website is designed for a general audience and does
+                        not knowingly collect information from children under
+                        the age of 16.
+                    </p>
+                    <h2>Changes to Our Privacy Policy</h2>
+                    <p>
+                        We may update this policy periodically. Any changes will
+                        be posted on this page with an updated revision date.
+                    </p>
+                    <h2>Contact Us</h2>
+                    <p>
+                        For any questions or concerns about our privacy policy,
+                        please contact us at post@bsm.no or 55 55 55 55.
+                    </p>
+                    <h2>Governing Law</h2>
+                    <p>This privacy policy is governed by Norwegian law.</p>
+                </div>
             </section>
         </main>
 
         <footer class="footer-wrapper">
-        
             <div class="info-wrapper">
                 <div class="info-wrapper__location">
                     <span>Contact info</span>
@@ -217,13 +236,20 @@
                         <a href="./contact-us.html">Contact us</a>
                         <a href="./contribution.html">Volunteering</a>
                         <a href="./privacy-policy.html">Privacy policy</a>
-                        <a href="./terms-and-conditions.html">Terms and conditions</a>
+                        <a href="./terms-and-conditions.html"
+                            >Terms and conditions</a
+                        >
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
-                    <span>Newsletter</p>
+                    <span>Newsletter</span>
                     <div class="input-wrapper">
-                        <input type="email" name="email" id="email" placeholder="Your e-mail address"/>
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            placeholder="Your e-mail address"
+                        />
                         <button type="submit">
                             <i class="fa-solid fa-play"></i>
                         </button>
@@ -232,7 +258,10 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img src="../../assets/images/logo.png" alt="company logo" />
+                    <img
+                        src="../../assets/images/logo.png"
+                        alt="company logo"
+                    />
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
@@ -240,16 +269,24 @@
                 </div>
                 <div class="info-wrapper-bottom__social-media">
                     <div>
-                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com"
+                            ><i class="fa-brands fa-facebook-f"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com"
+                            ><i class="fa-brands fa-instagram"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com"
+                            ><i class="fa-brands fa-tiktok"></i
+                        ></a>
                     </div>
                     <div>
-                        <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.x.com"
+                            ><i class="fa-brands fa-x-twitter"></i
+                        ></a>
                     </div>
                 </div>
             </div>
