add links to footer

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <div>
                         <a href="./src/html/about.html">About us</a>
                         <a href="./src/html/contact-us.html">Contact us</a>
-                        <a href="./src/html/contribution.html">Volunteering</a>
+                        <a href="./src/html/contribution.html">Contribution</a>
                         <a href="./src/html/privacy-policy.html"
                             >Privacy policy</a
                         >
