--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -222,11 +222,13 @@
                 <div class="info-wrapper__quick-links">
                     <span>Quick Links</span>
                     <div>
-                        <a href="">About us</a>
-                        <a href="">Contact us</a>
-                        <a href="">Volunteering</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Terms and conditions</a>
+                        <a href="./about.html">About us</a>
+                        <a href="./contact-us.html">Contact us</a>
+                        <a href="./contribution.html">Contribution</a>
+                        <a href="./privacy-policy.html">Privacy policy</a>
+                        <a href="./terms-and-conditions.html"
+                            >Terms and conditions</a
+                        >
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
