--- a/src/html/terms-and-conditions.html
+++ b/src/html/terms-and-conditions.html
@@ -248,7 +248,7 @@
                     <div>
                         <a href="./about.html">About us</a>
                         <a href="./contact-us.html">Contact us</a>
-                        <a href="./contribution.html">Volunteering</a>
+                        <a href="./contribution.html">Contribution</a>
                         <a href="./privacy-policy.html">Privacy policy</a>
                         <a href="./terms-and-conditions.html"
                             >Terms and conditions</a
