--- a/src/html/birthday.html
+++ b/src/html/birthday.html
@@ -134,7 +134,7 @@
                     <div class="contact-us-wrapper">
                         <span>Book with us</span>
                         <p>Get in touch with us via our contact page</p>
-                        <a href="">Contact us</a>
+                        <a href="./contact-us.html">Contact us</a>
                     </div>
                 </div>
 
