--- a/src/html/about.html
+++ b/src/html/about.html
@@ -118,7 +118,7 @@
                     <div class="contact-us-wrapper">
                         <span>Questions</span>
                         <p>Get in touch with us via our contact page</p>
-                        <a href="">Contact us</a>
+                        <a href="./contact-us.html">Contact us</a>
                     </div>
                 </div>
                 
