change id to prevent duplicate

--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -142,8 +142,13 @@
                         </div>
                     </div>
                     <div class="field-holder">
-                        <input type="email" name="email" id="email" required />
-                        <label for="email">E-mail</label>
+                        <input
+                            type="email"
+                            name="e-mail"
+                            id="e-mail"
+                            required
+                        />
+                        <label for="e-mail">E-mail</label>
                     </div>
                     <div class="field-holder">
                         <input
