add hero img to stylesheet

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -92,11 +92,7 @@
 
         <main>
             <section class="hero-wrapper">
-                <div class="hero-wrapper__background">
-                    <img
-                        src="../../assets/images/scott-webb-102825.jpg"
-                        alt=""
-                    />
+                <div class="hero-wrapper__background about__background">
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg
                             data-name="Layer 1"
