--- a/src/html/birthday.html
+++ b/src/html/birthday.html
@@ -264,10 +264,12 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img
-                        src="../../assets/images/logo.png"
-                        alt="company logo"
-                    />
+                    <a href="../../index.html">
+                        <img
+                            src="../../assets/images/logo.png"
+                            alt="company logo"
+                        />
+                    </a>
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
