change section to div

--- a/src/html/birthday.html
+++ b/src/html/birthday.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div
                     class="hero-wrapper__background birthday-wrapper__background"
                 >
@@ -109,7 +109,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <section class="birthday-info-wrapper">
                 <h1>Want to celebrate your birthday with us?</h1>
