--- a/src/html/birthday.html
+++ b/src/html/birthday.html
@@ -147,8 +147,7 @@
                         </p>
                         <p>
                             <span>Days:</span>
-                            Fridays from 17:00 - 19:00 and weekends from 11:00 -
-                            13:00
+                            Fridays 17:00 - 19:00 and weekends 11:00 - 13:00
                         </p>
                         <p>
                             <span>Duration:</span>
