change section to div

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div class="hero-wrapper__background about__background">
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg
@@ -107,7 +107,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <section class="about-wrapper">
                 <h1>About Bergen Science Museum</h1>
