--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div class="hero-wrapper__background">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7886.356745399663!2d5.3187825!3d60.385946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfc01b28180bd%3A0x74b5075aad390869!2sNoroff%20Bergen!5e0!3m2!1sen!2sno!4v1708592993426!5m2!1sen!2sno"
@@ -114,7 +114,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <section class="form-wrapper">
                 <h1>Need to contact ts?</h1>
