--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div
                     class="hero-wrapper__background contribution-hero__background"
                 >
@@ -109,7 +109,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <section class="information-wrapper">
                 <h1>Want to contribute to our museum?</h1>
