--- a/src/html/events.html
+++ b/src/html/events.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div
                     class="hero-wrapper__background events-wrapper__background"
                 >
@@ -109,7 +109,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
             <section class="events-wrapper">
                 <div class="main-event-wrapper">
                     <h1>A Night in the Museum</h1>
