--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -91,7 +91,7 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
+            <div class="hero-wrapper">
                 <div
                     class="hero-wrapper__background exhibitions-hero__background"
                 >
@@ -109,7 +109,7 @@
                         </svg>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <section class="exhibitions-wrapper">
                 <div class="evolution-wrapper">
