add label to input header

--- a/src/html/events.html
+++ b/src/html/events.html
@@ -31,7 +31,8 @@
         <link rel="stylesheet" href="../css/global.css" />
     </head>
     <body>
-        <input type="checkbox" name="toggler" class="toggler" />
+        <label class="checkbox-label" for="toggler">Toggler</label>
+        <input type="checkbox" name="toggler" id="toggler" class="toggler" />
         <header class="header-wrapper">
             <div class="header-wrapper__left">
                 <a href="../../index.html">
@@ -132,7 +133,7 @@
                             alt="a floating comic book style astronaut - photo by monica garniga"
                         />
                         <div class="card__info">
-                            <h3>Visiting Professor of Aeronautics</h3>
+                            <h2>Visiting Professor of Aeronautics</h2>
                             <p>
                                 It is our pleasure to announce that Professor
                                 Sheila Widnall from the Massachusetts Institute
@@ -150,7 +151,7 @@
                             alt="wall-e figure holding a flower, made with lego - photo by jason leung"
                         />
                         <div class="card__info">
-                            <h3>Learn robot programming</h3>
+                            <h2>Learn robot programming</h2>
                             <p>
                                 Join us in this beginner's course in learning
                                 robot programming during the winter break! This
@@ -167,7 +168,7 @@
                             alt="a watermill from nemo science museum - photo by manel sean"
                         />
                         <div class="card__info">
-                            <h3>Energetica Exhibition on Loan</h3>
+                            <h2>Energetica Exhibition on Loan</h2>
                             <p>
                                 On loan from the NEMO Science Museum in
                                 Amsterdam, the Energetica exhibition is coming
