--- a/src/html/terms-and-conditions.html
+++ b/src/html/terms-and-conditions.html
@@ -30,7 +30,8 @@
         <link rel="stylesheet" href="../css/global.css" />
     </head>
     <body>
-        <input type="checkbox" name="toggler" class="toggler" />
+        <label class="checkbox-label" for="toggler">Toggler</label>
+        <input type="checkbox" name="toggler" id="toggler" class="toggler" />
         <header class="header-wrapper">
             <div class="header-wrapper__left">
                 <a href="../../index.html">
