add label to input in footer

--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -238,6 +238,9 @@
                 <div class="info-wrapper__newsletter">
                     <span>Newsletter</span>
                     <div class="input-wrapper">
+                        <label for="email" class="newsletter-label"
+                            >E-mail</label
+                        >
                         <input
                             type="email"
                             name="email"
