--- a/src/html/about.html
+++ b/src/html/about.html
@@ -143,7 +143,6 @@
                 </div>
 
                 <div class="practical-info-wrapper">
-                    <h2>Practical Information</h2>
                     <div class="practical-info-wrapper__items">
                         <div>
                             <strong>Admission</strong>
@@ -182,7 +181,6 @@
                             </p>
                         </div>
                     </div>
-                    <div class=""></div>
                 </div>
             </section>
 
@@ -199,7 +197,7 @@
                             science?
                         </h3>
                         <p>
-                            Come on down to our museum, there’s plenty to see
+                            Come on down to our museum, there's plenty to see
                             and do! You can learn about Newtonian physics from
                             our bumper swing, or why not travel back in time and
                             meet our resident Woolly Mammoth?
@@ -207,14 +205,8 @@
                         <p>
                             We also have the Young Stars club which meets once a
                             week on a Saturday between 10:00 and 13:00 where
-                            you’ll get to explore and experiment with our team
+                            you'll get to explore and experiment with our team
                             of experts.
-                        </p>
-                        <p>
-                            During the school holidays we run special holiday
-                            events where you can join other children your age to
-                            go on a journey of discovery. Each holiday we pick a
-                            new theme to explore.
                         </p>
                     </div>
                 </div>
