add proper styles

--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -129,7 +129,7 @@
                         didn’t survive, including our Woolly Mammoth, the Dodos,
                         and a number of dinosaurs too.
                     </p>
-                    <a href="./exhibitions.html"></a>
+                    <a href="./exhibitions.html">Read more</a>
                 </div>
 
                 <div class="events__other-events">
