--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 Gather your family for an exciting night in the
                                 museum! Get ready to cozy up next to the
                                 dinosaurs and science displays for a sleepover
-                                adventure. Don\t forget your trusty sleeping bag
+                                adventure. Don't forget your trusty sleeping bag
                                 as we prepare to dive into the wonders of
                                 science together. It's going to be a night
                                 filled with exploration, laughter, and maybe
