--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -126,7 +126,7 @@
                         Discover the origins of life on this planet and how the
                         species we know today have evolved our time. You can
                         also take some time to meet a few of the creatures who
-                        didn’t survive, including our Woolly Mammoth, the Dodos,
+                        didn't survive, including our Woolly Mammoth, the Dodos,
                         and a number of dinosaurs too.
                     </p>
                     <a href="./exhibitions.html">Read more</a>
