remove repetitive code

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </header>
 
         <main>
-            <section class="hero-wrapper">
-                <div class="hero-wrapper__background landing-hero__background">
+            <section class="hero-wrapper flex">
+                <div class="hero-wrapper__background landing__background flex">
                     <div>
                         <p>Welcome to</p>
                         <div
@@ -125,14 +125,14 @@
                 </div>
             </section>
 
-            <section id="events" class="events-wrapper">
+            <section id="events" class="events-wrapper flex">
                 <h2>Upcoming events and activities</h2>
                 <div class="events__night-event">
                     <img
                         src="./assets/images/luca-severin-HICcDxJ7PTM-unsplash.jpg"
                         alt="picture of the museum at night - photo by luca severin"
                     />
-                    <div class="events__night-event__info">
+                    <div class="flex">
                         <div class="card__info">
                             <h3>A night in the museum!</h3>
                             <p>
