--- a/src/html/birthday.html
+++ b/src/html/birthday.html
@@ -93,9 +93,7 @@
 
         <main>
             <div class="hero-wrapper">
-                <div
-                    class="hero-wrapper__background birthday-wrapper__background"
-                >
+                <div class="hero-wrapper__background birthday__background">
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg
                             data-name="Layer 1"
@@ -112,7 +110,7 @@
                 </div>
             </div>
 
-            <section class="birthday-info-wrapper">
+            <section class="birthday-info-wrapper flex">
                 <h1>Want to celebrate your birthday with us?</h1>
 
                 <div class="birthday-info-wrapper__items">
@@ -132,7 +130,7 @@
                             7th birthday and last for two (2) hours.
                         </p>
                     </div>
-                    <div class="contact-us-wrapper">
+                    <div class="contact-us-wrapper flex">
                         <span>Book with us</span>
                         <p>Get in touch with us via our contact page</p>
                         <a href="./contact-us.html">Contact us</a>
