--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <section class="information-wrapper">
+            <section class="information-wrapper flex">
                 <h1>Want to contribute to our museum?</h1>
                 <div>
                     <h2>Support us</h2>
