--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <section class="exhibitions-wrapper">
+            <section class="exhibitions-wrapper flex">
                 <div class="evolution-wrapper">
                     <h1>Evolution</h1>
                     <p>
