change meta description and title

--- a/src/html/events.html
+++ b/src/html/events.html
@@ -3,11 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="Want to celebrate your birthday at Bergen Science Museum? Read about our prices and alternatives here."
-        />
-        <title>Book a Birthday | Bergen Science Museum</title>
+        <meta name="description" content="Find out more about our events!." />
+        <title>Events | Bergen Science Museum</title>
 
         <link
             rel="shortcut icon"
