update alt text

--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -38,7 +38,7 @@
                 <a href="../../index.html">
                     <img
                         src="../../assets/images/logo.png"
-                        alt="purple company logo which shows a creative take on sodium"
+                        alt="purple company logo which shows a creative take on nitrogen"
                     />
                 </a>
                 <div class="header-wrapper__left-text">
@@ -258,7 +258,7 @@
                     <a href="../../index.html">
                         <img
                             src="../../assets/images/logo.png"
-                            alt="company logo"
+                            alt="purple company logo which shows a creative take on nitrogen"
                         />
                     </a>
                     <div class="text">
