--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -38,7 +38,7 @@
                 <a href="../../index.html">
                     <img
                         src="../../assets/images/logo.png"
-                        alt="purple company logo which shows a creative take on sodium"
+                        alt="purple company logo which shows a creative take on nitrogen"
                     />
                 </a>
                 <div class="header-wrapper__left-text">
@@ -136,7 +136,7 @@
                     <article class="card">
                         <img
                             src="../../assets/images/possessed-photography-g29arbbvPjo-unsplash.jpg"
-                            alt="a robot showing the rock hand sick - photo by possessed photography"
+                            alt="a robot showing the rock & roll hand symbol - photo by possessed photography"
                         />
                         <div class="card__info">
                             <h2>Robotics and AI</h2>
@@ -290,7 +290,7 @@
                     <a href="../../index.html">
                         <img
                             src="../../assets/images/logo.png"
-                            alt="company logo"
+                            alt="purple company logo which shows a creative take on nitrogen"
                         />
                     </a>
                     <div class="text">
